// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader Component should render a basic component: basic 1`] = `
<PageHeader
  productLabel={null}
  t={[Function]}
>
  <PageHeader>
    <section
      className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
      widget-type="InsightsPageHeader"
    >
      <PageHeaderTitle
        className="pf-u-mb-sm"
        title={
          <span
            className="test"
          >
            lorem
          </span>
        }
      >
        <Title
          className="pf-u-mb-sm"
          headingLevel="h1"
          size="2xl"
          widget-type="InsightsPageHeaderTitle"
        >
          <h1
            className="pf-c-title pf-m-2xl pf-u-mb-sm"
            widget-type="InsightsPageHeaderTitle"
          >
             
            <span
              className="test"
            >
              lorem
            </span>
             
          </h1>
        </Title>
      </PageHeaderTitle>
    </section>
  </PageHeader>
</PageHeader>
`;

exports[`PageHeader Component should render string node types: string 1`] = `
<PageHeader
  productLabel={null}
  t={[Function]}
>
  <PageHeader>
    <section
      className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
      widget-type="InsightsPageHeader"
    >
      <PageHeaderTitle
        className="pf-u-mb-sm"
        title="dolor sit"
      >
        <Title
          className="pf-u-mb-sm"
          headingLevel="h1"
          size="2xl"
          widget-type="InsightsPageHeaderTitle"
        >
          <h1
            className="pf-c-title pf-m-2xl pf-u-mb-sm"
            widget-type="InsightsPageHeaderTitle"
          >
             
            dolor sit
             
          </h1>
        </Title>
      </PageHeaderTitle>
    </section>
  </PageHeader>
</PageHeader>
`;

exports[`PageHeader Component should render the subtitle when viewId is provided: with subtitle 1`] = `
<PageHeader
  productLabel="RHEL"
  t={[Function]}
>
  <PageHeader>
    <section
      className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
      widget-type="InsightsPageHeader"
    >
      <PageHeaderTitle
        className="pf-u-mb-sm"
        title="lorem"
      >
        <Title
          className="pf-u-mb-sm"
          headingLevel="h1"
          size="2xl"
          widget-type="InsightsPageHeaderTitle"
        >
          <h1
            className="pf-c-title pf-m-2xl pf-u-mb-sm"
            widget-type="InsightsPageHeaderTitle"
          >
             
            lorem
             
          </h1>
        </Title>
      </PageHeaderTitle>
      <p>
        t(curiosity-view.subtitle, {"appName":"Subscription Watch","context":"RHEL"}, [object Object])
      </p>
    </section>
  </PageHeader>
</PageHeader>
`;
